<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">
        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/locationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/timeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sub_title"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imgContainer"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/error_msg"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:visibility="gone" />

        <LinearLayout
            android:id="@+id/imgContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@+id/overviewContainer">

            <ImageView
                android:id="@+id/weatherImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/img_desc" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/weather_title"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/temp_title"
                android:textColor="@color/white"
                android:textSize="80sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/titleTempMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/titleTempMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tempMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>
                
                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tempMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <EditText
                android:id="@+id/inputCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/prompt_city"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp"
                android:autofillHints="Ronneby" />

            <EditText
                android:id="@+id/inputZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/prompt_extra"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp"
                android:autofillHints="SE" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_radius"
                android:text="@string/action_btn"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

        </LinearLayout>

</RelativeLayout>